--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="top">
         <div class="top">
             <div class="top__item">
-                <p>Language: <a href="./en/index.html">English</a></p>
+                <p>Language: <a href="./en/index.html">QUECHUA</a></p>
             </div>
         </div>
     </div>
@@ -29,7 +29,7 @@
                     <li><a href="design-thinking/practica5.html">Práctica 5</a></li>
                 </ul>
              </li>
-            <li><a href="finalProject.html">Proyecto Final</a>
+            <li><a href="finalProject.html"> PROYECTO DE INNOVACION</a>
                 <ul>
                     <li><a href="proyecto-final/semana1.html">Semana 1</a></li>
                     <li><a href="proyecto-final/semana2.html">Semana 2</a></li>
@@ -50,7 +50,7 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p>El objetivo de éste portafolio es mostrar a detalle todo lo realizado en el curso de Innovación e Investigación Tecnológica. Aplicando diversas metodologías y técnicas de estudio para la elaboración de los distintos proyectos presentados.</p>
+                    <p>Este proyecto se basa en la acttualizacion e informacion de ciudadanos aledaños de la ciudad/capital.</p>
                 </div>
             </div>
 
