--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p>Es esta pagina encontraras toda la ayuda necesaria para poder civilizarte y actuar como persona.</p>
+                    <p>wwww.</p>
                 </div>
             </div>
 
